# alexa-with-chatgpt

./: .gitignore  ask-resources.json  pyproject.toml
lambda/: chatgpt.py
skill-package/: skill.json
skill-package/interactionModels/custom/: en-US.json
