[tool.poetry]
name = "alexa-with-chatgpt"
version = "0.1.0"
description = ""
authors = ["Justin Peavey <>", "owenmather <>"]
readme = "README.md"
packages = [{include = "alexa_with_chatgpt"}]
repository = "https://github.com/jspv/alexa-with-chatgpt"

[tool.poetry.dependencies]
python = "^3.8"
ask-sdk-core = "^1.19.0"
openai = "^0.27.8"
certifi = "^2023.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
